--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto = update
-spring.datasource.url=jdbc:mysql://22HW037418:3306/npt?autoReconnect=true&useSSL=false&useTimeZone=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://22HW037418:3306/npt?autoReconnect=true&useSSL=false&useTimeZone=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=root
+
+spring.datasource.url = jdbc:mysql://localhost:3306/ups1
 spring.datasource.username=root
 spring.datasource.password=root
